build_output_phase5_pricing.txt

> Task :compileJava FAILED
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\DealerController.java:6: error: cannot find symbol
import com.carselling.oldcar.mapper.CarMapper;
                                   ^
  symbol:   class CarMapper
  location: package com.carselling.oldcar.mapper
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\DealerController.java:37: error: cannot find symbol
    private final CarMapper carMapper;
                  ^
  symbol:   class CarMapper
  location: class DealerController
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\DealerController.java:30: error: cannot find symbol
@RequiredArgsConstructor
^
  symbol:   class CarMapper
  location: class DealerController
3 errors

[Incubating] Problems report is available at: file:///D:/Startup/Car%20Frontend%20Backend/Sell-the-old-Car/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\DealerController.java:6: error: cannot find symbol
  import com.carselling.oldcar.mapper.CarMapper;
                                     ^
    symbol:   class CarMapper
    location: package com.carselling.oldcar.mapper
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\DealerController.java:37: error: cannot find symbol
      private final CarMapper carMapper;
                    ^
    symbol:   class CarMapper
    location: class DealerController
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\DealerController.java:30: error: cannot find symbol
  @RequiredArgsConstructor
  ^
    symbol:   class CarMapper
    location: class DealerController
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
1 actionable task: 1 executed
